<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TelaCadastro" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:stretchColumns="1" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/str_nome" />

                <EditText
                    android:id="@+id/edtNomeCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/str_ano" />

                <EditText
                    android:id="@+id/edtAnoCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/str_diretor" />

                <EditText
                    android:id="@+id/edtDiretorCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingRight="10dp"
                    android:text="@string/str_genero" />

                <Spinner
                    android:id="@+id/spnGeneroCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/str_array_generos" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingRight="10dp"
                    android:text="@string/str_nacionalidade" />

                <Spinner
                    android:id="@+id/spnNacionalidadeCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/str_array_paises" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingRight="10dp"
                    android:text="@string/str_assitido" />

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/rbSimCad"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/str_sim" />

                    <RadioButton
                        android:id="@+id/rbNaoCad"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:text="@string/str_nao" />
                </RadioGroup>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnAdicionarCad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_adicionar" />

            <Button
                android:id="@+id/btnVoltarCad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_voltar" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>